<resources>
    <string name="app_name">GamesApp</string>
    <string name="til_username">Email</string>
    <string name="til_password">Password</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="btn_login">LOG IN</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="title">Título</string>
    <string name="description">Description</string>
</resources>