<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:gravity="center_vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                tools:ignore="MissingClass">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/til_username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                tools:ignore="MissingClass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/til_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:text="@string/remember"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/login_button"
                android:text="@string/btn_login"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="#64C8FF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>